gitlab-ci: Rename RELEASE variable to RELEASE_JOB
This interfered with the autoconf variable of the same name, breaking
pre-release builds.

(cherry picked from commit 15dca84793d5ec4ff922726477923e40caa075eb)
(cherry picked from commit 3e55edd97c8eba271f5cb64b9362796791e0e887)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ stages:
     expire_in: 1 year
   only:
     variables:
-      - $RELEASE == "yes"
+      - $RELEASE_JOB == "yes"
 
 ############################################################
 # Runner Tags
