--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -214,6 +214,7 @@ Library
         GHC.Float.RealFracMethods
         GHC.Foreign
         GHC.ForeignPtr
+        GHC.ForeignPtr.Ops
         GHC.GHCi
         GHC.GHCi.Helpers
         GHC.Generics
