--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -521,6 +521,7 @@ Library
         GHC.Settings.Constants
         GHC.Settings.IO
         GHC.Stg.CSE
+        GHC.Stg.Debug
         GHC.Stg.DepAnal
         GHC.Stg.FVs
         GHC.Stg.Lift
@@ -632,6 +633,7 @@ Library
         GHC.Types.ForeignStubs
         GHC.Types.HpcInfo
         GHC.Types.Id
+        GHC.Types.IPE
         GHC.Types.Id.Info
         GHC.Types.Id.Make
         GHC.Types.Literal
